<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="150dp"
    android:layout_margin="10dp"
    android:layout_gravity="center"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/select_location"/>
    
    <Spinner 
        android:id="@+id/location_array"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/location_array"
        android:prompt="@string/city"
        />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:orientation="horizontal">
        
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/submit"
            android:onClick="submitLocation"
            />
        
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/cancel"
            android:onClick="cancel"
            />
        
        
    </LinearLayout>

    
</LinearLayout>
